argocd/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  rules:
    - host: argocd.noctsol.test
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  number: 8000
            path: /
            pathType: "Prefix"
          # - backend:
          #     service:
          #       name: argocd-server
          #       port:
          #         number: 443
          #   path: /
          #   pathType: "Prefix"
  # tls:
  #   - hosts:
  #       - argocd.noctsol.test
  #     secretName: argo-cert-tls
